--- a/writeup/introduction.tex
+++ b/writeup/introduction.tex
@@ -69,19 +69,23 @@ may be of interest.
 
 In \Cref{chap:categorical-cryptography},
 we present the model of~\cite{broadbent-karvonen-2022}. We also present several
-original contributions.
-In \Cref{sec:ef-comp}, we
-show how to combine binary-encoded sets with Kleisi categories to give
-categorical models of computationally-bounded, effectful computation. In
-\Cref{sec:extensions}, we give
-several extensions to the semantics of protocols
-of~\cite{broadbent-karvonen-2022}, including tools for simultaneously handling
-single- and multi-use resources, and for modelling protocols with correlated
-input. In \Cref{sec:interactive proof},
-we use these novel tools to give a categorical correctness definition for
-interactive proofs. In
-\Cref{sec:2-cat}, we
-generalize the model of~\cite{broadbent-karvonen-2022} to a 2-categorical
-setting. Finally, in \Cref{sec:conclusion}, we discuss
-several other lines of work, and give a heurstic comparison between the
-categorical model and Universal Composability.
+original contributions: \begin{itemize}
+  \item In
+    \Cref{sec:ef-comp},
+    we show how to combine binary-encoded sets with Kleisi categories to give
+    categorical models of computationally-bounded, effectful computation.
+  \item In \Cref{sec:extensions},
+    we give several extensions to the semantics of protocols
+    of~\cite{broadbent-karvonen-2022}, including tools for simultaneously handling
+    single- and multi-use resources, and for modelling protocols with correlated
+    input.
+  \item In \Cref{sec:interactive proof},
+    we use these novel tools to give a categorical correctness definition for
+    interactive proofs.
+  \item In \Cref{sec:2-cat},
+    we generalize the model of~\cite{broadbent-karvonen-2022} to a 2-categorical
+    setting.
+  \item Finally, in \Cref{sec:conclusion}, we discuss
+    several other lines of work, and give a heurstic comparison between the
+    categorical model and Universal Composability.
+\end{itemize}
