--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -59,13 +59,13 @@ undergrad throughout the year. I specifically want to thank Alex Moll, who was
 always willing to answer my very naive questions about probability theory and to
 listen to half-baked ideas that were only tangentially relevant to him.
 
-As an academic, I am especially indebted to Jana Comstock, without whom I would
-probably have been a physicist; to Jim Fix, who taught me to love types; to
-Angélica, who taught me to love categories; to Sierra Maciorowski, who taught me
-to love teaching; and to Charlie McGuffey, Zajj Daugherty, Adam, Angélica, and
-Steve Zdancewic, who throughout my time at Reed and especially over the last
-year have given me advice and support in spades. The mathematician I am
-today is inextricable from their influence.
+As an academic, I am especially indebted to Jana Comstock, who taught me to love
+math; to Jim Fix, who taught me to love types; to Angélica, who taught me to
+love categories; to Sierra Maciorowski, who taught me to love teaching; and to
+Charlie McGuffey, Zajj Daugherty, Adam, Angélica, and Steve Zdancewic, who
+throughout my time at Reed and especially over the last year have given me
+advice and support in spades. The mathematician I am today is inextricable from
+their influence.
 
 I would feel remiss not to mention the many authors of queer speculative
 fictions from whom I draw continual inspiration and strength; among many, I will
