add college showcase

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -290,7 +290,7 @@
 			\draw (g2.north) to (gdots.south) {};
 			\draw (gk.south) to (gdots.north) + (0,-0.2);
 			\draw (gk.north) to ++(0,.3) node[right] {};
-		\end{pic}\] hold? \pause\pause{} Only if $K(n) = O(p^d)$.
+		\end{pic}\] hold? \pause\pause{} Only if $K(n) = O(n^d)$.
 \end{frame}
 
 \begin{frame}[fragile]{Simulation-based composability}
