--- a/showcase-college/prelude.tex
+++ b/showcase-college/prelude.tex
@@ -24,6 +24,16 @@
 \DeclareFieldFormat{labelnumberwidth}{}
 \setlength{\biblabelsep}{0pt}
 
+\defbibenvironment{midbib}
+{\list
+	{}
+	{\setlength{\leftmargin}{\bibhang}%
+		\setlength{\itemindent}{-\leftmargin}%
+		\setlength{\itemsep}{\bibitemsep}%
+		\setlength{\parsep}{\bibparsep}}}
+{\endlist}
+{\item}
+
 % quality of life
 \renewcommand{\emptyset}{\varnothing}
 
