--- a/showcase-college/ref.bib
+++ b/showcase-college/ref.bib
@@ -1,4 +1,4 @@
-@incollection{bk,
+@incollection{broadbent-karvonen-2022,
 	author = "Broadbent, Anne and Karvonen, Martti",
 	title = "Categorical composable cryptography",
 	booktitle = "Foundations of software science and computation structures",
@@ -9,93 +9,7 @@
 	year = 2022,
 	isbn = 9783030992538,
 	doi = "10.1007/978-3-030-99253-8\_9",
-}
-
-@article{shazmeen,
-	title = {A practical approach for secure internet banking based on
-	         cryptography},
-	author = {Shazmeen, Syeda Farha and Prasad, Shyam},
-	journal = {International Journal of Scientific and Research Publications},
-	volume = {2},
-	number = {12},
-	pages = {1--6},
-	year = {2012},
-	publisher = {Citeseer},
-}
-
-@inproceedings{khelifi,
-	title = {Enhancing protection techniques of e-banking security services using
-	         open source cryptographic algorithms},
-	author = {Khelifi, Adel and Aburrous, Maher and Talib, Manar Abu and Shastry,
-	          PVS},
-	booktitle = {2013 14th ACIS International Conference on Software Engineering,
-	             Artificial Intelligence, Networking and Parallel/Distributed
-	             Computing},
-	pages = {89--95},
-	year = {2013},
-	organization = {IEEE},
-}
-
-@inproceedings{sharma,
-	title = {Enhancing online banking authentication using hybrid cryptographic
-	         method},
-	author = {Sharma, Neha and Bohra, Brahmdutt},
-	booktitle = {2017 3rd International Conference on Computational Intelligence
-	             \& Communication Technology (CICT)},
-	pages = {1--8},
-	year = {2017},
-	organization = {IEEE},
-}
-
-@inproceedings{yang,
-	title = {The security of electronic banking},
-	author = {Yang, Yi-Jen},
-	booktitle = {Proc. Nat. I International Systems Security Conference},
-	pages = {41--52},
-	year = {1997},
-}
-
-@misc{davies,
-	author = {Gareth T. Davies and Sebastian Faller and Kai Gellert and Tobias
-	          Handirk and Julia Hesse and Máté Horváth and Tibor Jager},
-	title = {Security Analysis of the WhatsApp End-to-End Encrypted Backup
-	         Protocol},
-	howpublished = {Cryptology ePrint Archive, Paper 2023/843},
-	year = {2023},
-	url = {https://eprint.iacr.org/2023/843},
-}
-
-@inproceedings{david,
-	author = "David, Bernardo and Deligios, Giovanni and Goel, Aarushi and Ishai,
-	          Yuval and Konring, Anders and Kushilevitz, Eyal and Liu-Zhang,
-	          Chen-Da and Narayanan, Varun",
-	editor = "Handschuh, Helena and Lysyanskaya, Anna",
-	title = "Perfect MPC over Layered Graphs",
-	booktitle = "Advances in Cryptology -- CRYPTO 2023",
-	year = "2023",
-	publisher = "Springer Nature Switzerland",
-	address = "Cham",
-	pages = "360--392",
-	abstract = "The classical ``BGW protocol'' (Ben-Or, Goldwasser, and Wigderson,
-	            STOC 1988) shows that secure multiparty computation (MPC) among n
-	            parties can be realized with perfect full security if {\$}{\$}t <
-	            n/3{\$}{\$}t<n/3parties are corrupted. This holds against malicious
-	            adversaries in the ``standard'' model for MPC, where a fixed set of
-	            n parties is involved in the full execution of the protocol.
-	            However, the picture is less clear in the mobile adversary setting
-	            of Ostrovsky and Yung (PODC 1991), where the adversary may
-	            periodically ``move'' by uncorrupting parties and corrupting a new
-	            set of t parties. In this setting, it is unclear if full security
-	            can be achieved against an adversary that is maximally mobile, i.e.
-	            , moves after every round. The question is further motivated by the
-	            ``You Only Speak Once'' (YOSO) setting of Gentry et al. (Crypto
-	            2021), where not only the adversary is mobile but also each round
-	            is executed by a disjoint set of parties. Previous positive results
-	            in this model do not achieve perfect security, and either assume
-	            probabilistic corruption and a nonstandard communication model, or
-	            only realize the weaker goal of security-with-abort. The question
-	            of matching the BGW result in these settings remained open.",
-	isbn = "978-3-031-38557-5",
+	url = "https://doi.org/10.1007/978-3-030-99253-8_9",
 }
 
 @book{katz-lindell-2014,
@@ -312,6 +226,7 @@
 	         Protocols},
 	howpublished = {Cryptology ePrint Archive, Paper 2000/067},
 	year = {2000},
+	note = {\url{https://eprint.iacr.org/2000/067}},
 	url = {https://eprint.iacr.org/2000/067},
 }
 
@@ -928,9 +843,4 @@
 	numpages = {9},
 	keywords = {IP, PSPACE, interactive proofs},
 }
-
-
-
-
-
 
